objects/SiteContracts__c/SiteContracts__c.object-meta.xml
<CustomObject>
    <description>Links Sites to Contracts and holds all Alarm Master Data</description>
    <label>Site Contract</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>ContractId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>