objects/SiteContracts__c/fields/A_CLOSE_QTY__c.field-meta.xml
<CustomField>
    <fullName>A_CLOSE_QTY__c</fullName>
    <label>A/CLOSE QTY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>