objects/SiteContracts__c/fields/ACC_ADD1__c.field-meta.xml
<CustomField>
    <fullName>ACC_ADD1__c</fullName>
    <label>ACC ADD1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>