objects/SiteContracts__c/fields/ACC_ADD2__c.field-meta.xml
<CustomField>
    <fullName>ACC_ADD2__c</fullName>
    <label>ACC ADD2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>