objects/SiteContracts__c/fields/ACC_ADD3__c.field-meta.xml
<CustomField>
    <fullName>ACC_ADD3__c</fullName>
    <label>ACC ADD3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>