objects/SiteContracts__c/fields/ACC_POST_CODE__c.field-meta.xml
<CustomField>
    <fullName>ACC_POST_CODE__c</fullName>
    <label>ACC POST CODE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>