objects/SiteContracts__c/fields/Account_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Group__c</fullName>
    <description>To identify the account group for sharing rules</description>
    <inlineHelpText>Select the Account Group this is part of, if you want the Site Contract to be visible to the Customer login. Ex:- Bourne Leisure or C. Brewer &amp; Sons, etc</inlineHelpText>
    <label>Account Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bourne Leisure</fullName>
            </value>
            <value>
                <fullName>C. Brewer &amp; Sons</fullName>
            </value>
            <value>
                <fullName>Aster Property</fullName>
            </value>
            <value>
                <fullName>Wilko Retail Ltd</fullName>
            </value>
            <value>
                <fullName>The Police and Crime Commissioner for West Mercia</fullName>
            </value>
            <value>
                <fullName>West Midlands Ambulance Service NHS FoundationTrust</fullName>
            </value>
            <value>
                <fullName>test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>