objects/SiteContracts__c/fields/Age_of_Panel_DVR__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Panel_DVR__c</fullName>
    <label>Age of Panel / DVR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;5 Years</fullName>
            </value>
            <value>
                <fullName>5-10 Years</fullName>
            </value>
            <value>
                <fullName>10-15 Years</fullName>
            </value>
            <value>
                <fullName>15 or more Years</fullName>
            </value>
            <value>
                <fullName>No Panel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>