objects/SiteContracts__c/fields/Al_Unit__c.field-meta.xml
<CustomField>
    <fullName>Al_Unit__c</fullName>
    <label>Al Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>