objects/SiteContracts__c/fields/Alarm_Mech__c.field-meta.xml
<CustomField>
    <fullName>Alarm_Mech__c</fullName>
    <label>Alarm Mech</label>
    <length>100</length>
    <type>Text</type>
</CustomField>