objects/SiteContracts__c/fields/AM_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>AM_Contract_Number__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Alarm Master Contract Number Historic</inlineHelpText>
    <label>AM Contract Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>