objects/SiteContracts__c/fields/AM_Office_Notes__c.field-meta.xml
<CustomField>
    <fullName>AM_Office_Notes__c</fullName>
    <label>AM Office Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>