objects/SiteContracts__c/fields/AM_Private_Notes__c.field-meta.xml
<CustomField>
    <fullName>AM_Private_Notes__c</fullName>
    <label>AM Private Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>