objects/SiteContracts__c/fields/AM_Service_Notes_2__c.field-meta.xml
<CustomField>
    <fullName>AM_Service_Notes_2__c</fullName>
    <label>AM Service Notes 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>