objects/SiteContracts__c/fields/AM_Status__c.field-meta.xml
<CustomField>
    <fullName>AM_Status__c</fullName>
    <inlineHelpText>If changing to Dormant, please setup a view to mass cancel the open visits. Use this field to stop Visits if on hold - a red warning appears on the visit booking status.</inlineHelpText>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dormant</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>