objects/SiteContracts__c/fields/AM_System_Type__c.field-meta.xml
<CustomField>
    <fullName>AM_System_Type__c</fullName>
    <inlineHelpText>Populates to Service Type on a new Visit Record</inlineHelpText>
    <label>System/Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air Compressor</fullName>
            </value>
            <value>
                <fullName>Getinge Autoclave</fullName>
            </value>
            <value>
                <fullName>Getinge Washer Disinfector</fullName>
            </value>
            <value>
                <fullName>Suction Pump</fullName>
            </value>
            <value>
                <fullName>Treatment Centre</fullName>
            </value>
            <value>
                <fullName>Report of Examination</fullName>
            </value>
            <value>
                <fullName>Medisafe Washer disinfector</fullName>
            </value>
            <value>
                <fullName>Mechanical X-Ray</fullName>
            </value>
            <value>
                <fullName>OPG</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Image Plate Scanner</fullName>
            </value>
            <value>
                <fullName>Sewer Pump System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>