objects/SiteContracts__c/fields/Aspir_Detect_QTY__c.field-meta.xml
<CustomField>
    <fullName>Aspir_Detect_QTY__c</fullName>
    <label>Aspir Detect QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>