objects/SiteContracts__c/fields/Aspiration_Detect__c.field-meta.xml
<CustomField>
    <fullName>Aspiration_Detect__c</fullName>
    <label>Aspiration Detect</label>
    <length>100</length>
    <type>Text</type>
</CustomField>