objects/SiteContracts__c/fields/AUTO_CLOSER__c.field-meta.xml
<CustomField>
    <fullName>AUTO_CLOSER__c</fullName>
    <label>AUTO CLOSER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>