objects/SiteContracts__c/fields/Automatic_Door_Qty__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Door_Qty__c</fullName>
    <label>Automatic Door Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>