objects/SiteContracts__c/fields/Available_to_Contractors__c.field-meta.xml
<CustomField>
    <fullName>Available_to_Contractors__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this box is ticked, 3rd party contractors can view this site contract. If a visit is added to a 3rd party, it automatically ticks this box.</inlineHelpText>
    <label>Available to Contractors</label>
    <type>Checkbox</type>
</CustomField>