objects/SiteContracts__c/fields/B_GLASS_QTY__c.field-meta.xml
<CustomField>
    <fullName>B_GLASS_QTY__c</fullName>
    <label>B/GLASS QTY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>