objects/SiteContracts__c/fields/B_W_PTZ_DOME_QTY__c.field-meta.xml
<CustomField>
    <fullName>B_W_PTZ_DOME_QTY__c</fullName>
    <label>B/W PTZ DOME QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>