objects/SiteContracts__c/fields/B_W_PTZ_QTY__c.field-meta.xml
<CustomField>
    <fullName>B_W_PTZ_QTY__c</fullName>
    <label>B/W PTZ QTY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>