objects/SiteContracts__c/fields/B_W_STATIC__c.field-meta.xml
<CustomField>
    <fullName>B_W_STATIC__c</fullName>
    <label>B/W STATIC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>