objects/SiteContracts__c/fields/B_W_STATIC_DOME__c.field-meta.xml
<CustomField>
    <fullName>B_W_STATIC_DOME__c</fullName>
    <label>B/W STATIC DOME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>