objects/SiteContracts__c/fields/Banned_Technician__c.field-meta.xml
<CustomField>
    <fullName>Banned_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Banned Technician</label>
    <referenceTo>Engineer__c</referenceTo>
    <relationshipLabel>Site Contracts (Banned Technician)</relationshipLabel>
    <relationshipName>Site_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>