objects/SiteContracts__c/fields/Beacon_Qty__c.field-meta.xml
<CustomField>
    <fullName>Beacon_Qty__c</fullName>
    <label>Beacon Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>