objects/SiteContracts__c/fields/Beam_Detect__c.field-meta.xml
<CustomField>
    <fullName>Beam_Detect__c</fullName>
    <label>Beam Detect</label>
    <length>100</length>
    <type>Text</type>
</CustomField>