objects/SiteContracts__c/fields/Beam_Detect_QTY__c.field-meta.xml
<CustomField>
    <fullName>Beam_Detect_QTY__c</fullName>
    <label>Beam Detect QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>