objects/SiteContracts__c/fields/Bell_Sounder_Qty__c.field-meta.xml
<CustomField>
    <fullName>Bell_Sounder_Qty__c</fullName>
    <label>Bell Sounder Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>