objects/SiteContracts__c/fields/Beta_Customer_Site_PO__c.field-meta.xml
<CustomField>
    <fullName>Beta_Customer_Site_PO__c</fullName>
    <formula>Site__r.Parent.Beta_PO_Customer_Record__r.Name + &quot;   &quot; +   Site__r.Beta_Site_Specific_PO__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beta Customer/Site PO</label>
    <type>Text</type>
</CustomField>