objects/SiteContracts__c/fields/Beta_PO__c.field-meta.xml
<CustomField>
    <fullName>Beta_PO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Beta Site Contract Small Works PO</description>
    <inlineHelpText>If mandatory, yet a P/O is not required, enter a dot (.).</inlineHelpText>
    <label>Beta Site Contract Small Works PO</label>
    <referenceTo>PO__c</referenceTo>
    <relationshipLabel>Site Contracts (Beta Site Contract Small Works PO)</relationshipLabel>
    <relationshipName>Site_Contracts3</relationshipName>
    <type>Lookup</type>
</CustomField>