objects/SiteContracts__c/fields/Beta_Site_Contract_PO__c.field-meta.xml
<CustomField>
    <fullName>Beta_Site_Contract_PO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Beta Site Contract PO</description>
    <inlineHelpText>Beta Site Contract PO, this is populated from the Site PO, but can also be over-written with a Site Contract PO. It is a lookup to the Purchase Order Object.
If mandatory, yet a P/O is not required, enter a dot (.).</inlineHelpText>
    <label>Beta Site Contract PO</label>
    <referenceTo>PO__c</referenceTo>
    <relationshipLabel>Site Contracts</relationshipLabel>
    <relationshipName>Site_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>