objects/SiteContracts__c/fields/Beta_Site_Contract_Reactive_PO__c.field-meta.xml
<CustomField>
    <fullName>Beta_Site_Contract_Reactive_PO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Site Contract Reactive PO</description>
    <inlineHelpText>Site Contract Reactive PO.
If mandatory, yet a P/O is not required, enter a dot (.).</inlineHelpText>
    <label>Beta Site Contract Reactive PO</label>
    <referenceTo>PO__c</referenceTo>
    <relationshipLabel>Site Contracts (Site Contract Reactive PO)</relationshipLabel>
    <relationshipName>Site_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>