objects/SiteContracts__c/fields/Bourne_Leisure_Contract__c.field-meta.xml
<CustomField>
    <fullName>Bourne_Leisure_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bourne Leisure Contract?</label>
    <type>Checkbox</type>
</CustomField>