objects/SiteContracts__c/fields/BREAK_GLASS__c.field-meta.xml
<CustomField>
    <fullName>BREAK_GLASS__c</fullName>
    <label>BREAK GLASS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>