objects/SiteContracts__c/fields/Break_Glass_Call_Point_Qty__c.field-meta.xml
<CustomField>
    <fullName>Break_Glass_Call_Point_Qty__c</fullName>
    <label>Break Glass Call Point Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>