objects/SiteContracts__c/fields/BULB_QTY__c.field-meta.xml
<CustomField>
    <fullName>BULB_QTY__c</fullName>
    <label>BULB QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>