objects/SiteContracts__c/fields/BULB_TYPE__c.field-meta.xml
<CustomField>
    <fullName>BULB_TYPE__c</fullName>
    <label>BULB TYPE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>