objects/SiteContracts__c/fields/C_C_PTZ_CAM__c.field-meta.xml
<CustomField>
    <fullName>C_C_PTZ_CAM__c</fullName>
    <label>C/C PTZ CAM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>