objects/SiteContracts__c/fields/C_C_PTZ_DOME__c.field-meta.xml
<CustomField>
    <fullName>C_C_PTZ_DOME__c</fullName>
    <label>C/C PTZ DOME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>