objects/SiteContracts__c/fields/C_C_PTZ_DOME_QTY__c.field-meta.xml
<CustomField>
    <fullName>C_C_PTZ_DOME_QTY__c</fullName>
    <label>C/C PTZ DOME QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>