objects/SiteContracts__c/fields/C_C_STATIC__c.field-meta.xml
<CustomField>
    <fullName>C_C_STATIC__c</fullName>
    <label>C/C STATIC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>