objects/SiteContracts__c/fields/C_C_STATIC_DOME__c.field-meta.xml
<CustomField>
    <fullName>C_C_STATIC_DOME__c</fullName>
    <label>C/C STATIC DOME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>