objects/SiteContracts__c/fields/Call_Out_Charge_2_Hour_Response_OOH__c.field-meta.xml
<CustomField>
    <fullName>Call_Out_Charge_2_Hour_Response_OOH__c</fullName>
    <label>Call Out Charge - 2 Hour Response OOH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>