objects/SiteContracts__c/fields/Call_Out_Charge_4_Hour_Response_OOH__c.field-meta.xml
<CustomField>
    <fullName>Call_Out_Charge_4_Hour_Response_OOH__c</fullName>
    <label>Call Out Charge-4 Hour Response OOH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>