objects/SiteContracts__c/fields/Call_Out_Charge_5_Day_Response__c.field-meta.xml
<CustomField>
    <fullName>Call_Out_Charge_5_Day_Response__c</fullName>
    <label>Call Out Charge - 5 Day Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>