objects/SiteContracts__c/fields/Call_Out_Charge_8_Hour_Response__c.field-meta.xml
<CustomField>
    <fullName>Call_Out_Charge_8_Hour_Response__c</fullName>
    <label>Call Out Charge - 8 Hour Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>