objects/SiteContracts__c/fields/Call_Out_Charge_Half_Hour_Thereafter__c.field-meta.xml
<CustomField>
    <fullName>Call_Out_Charge_Half_Hour_Thereafter__c</fullName>
    <label>Call Out Charge Half Hour Thereafter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>