objects/SiteContracts__c/fields/Call_Out_Charge_Incl_First_15_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Call_Out_Charge_Incl_First_15_Minutes__c</fullName>
    <label>Call Out Charge Incl. First 15 Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>