objects/SiteContracts__c/fields/Call_Out_Charge_Incl_First_Hour__c.field-meta.xml
<CustomField>
    <fullName>Call_Out_Charge_Incl_First_Hour__c</fullName>
    <defaultValue>260</defaultValue>
    <label>Call Out Charge Incl. First Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>