objects/SiteContracts__c/fields/Call_Out_OOH_Charge_Incl_First_15_Mins__c.field-meta.xml
<CustomField>
    <fullName>Call_Out_OOH_Charge_Incl_First_15_Mins__c</fullName>
    <defaultValue>120</defaultValue>
    <inlineHelpText>Out of Hours</inlineHelpText>
    <label>Call Out OOH Charge Incl. First 15 Mins</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>