objects/SiteContracts__c/fields/Call_Out_OOH_Charge_Incl_First_Hour__c.field-meta.xml
<CustomField>
    <fullName>Call_Out_OOH_Charge_Incl_First_Hour__c</fullName>
    <label>Call Out OOH Charge Incl. First Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>