objects/SiteContracts__c/fields/Call_Out_PO__c.field-meta.xml
<CustomField>
    <fullName>Call_Out_PO__c</fullName>
    <label>Call Out PO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>