objects/SiteContracts__c/fields/Call_Point_Sounder__c.field-meta.xml
<CustomField>
    <fullName>Call_Point_Sounder__c</fullName>
    <label>Call Point Sounder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>