objects/SiteContracts__c/fields/Call_Point_Sounder_QTY__c.field-meta.xml
<CustomField>
    <fullName>Call_Point_Sounder_QTY__c</fullName>
    <label>Call Point Sounder QTY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>