objects/SiteContracts__c/fields/CALLOUT_PO_EXPIRES__c.field-meta.xml
<CustomField>
    <fullName>CALLOUT_PO_EXPIRES__c</fullName>
    <label>CALLOUT PO EXPIRES</label>
    <length>100</length>
    <type>Text</type>
</CustomField>