objects/SiteContracts__c/fields/Callout_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Callout_PO_Number__c</fullName>
    <label>CALLOUT PO NO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>