objects/SiteContracts__c/fields/Cause_Effect__c.field-meta.xml
<CustomField>
    <fullName>Cause_Effect__c</fullName>
    <label>Cause Effect</label>
    <length>100</length>
    <type>Text</type>
</CustomField>