objects/SiteContracts__c/fields/Cause_Effect_Qty__c.field-meta.xml
<CustomField>
    <fullName>Cause_Effect_Qty__c</fullName>
    <label>Cause Effect Qty</label>
    <length>100</length>
    <type>Text</type>
</CustomField>