objects/SiteContracts__c/fields/Central_Station_Link_Qty__c.field-meta.xml
<CustomField>
    <fullName>Central_Station_Link_Qty__c</fullName>
    <label>Central Station Link Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>