objects/SiteContracts__c/fields/CH_TOTAL__c.field-meta.xml
<CustomField>
    <fullName>CH_TOTAL__c</fullName>
    <label>CH TOTAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>