objects/SiteContracts__c/fields/Change_Over_Done__c.field-meta.xml
<CustomField>
    <fullName>Change_Over_Done__c</fullName>
    <label>Change Over Done</label>
    <length>100</length>
    <type>Text</type>
</CustomField>