objects/SiteContracts__c/fields/Charge_Per_Fire_Blanket__c.field-meta.xml
<CustomField>
    <fullName>Charge_Per_Fire_Blanket__c</fullName>
    <inlineHelpText>Charge per unit - you must have a value in the Per Fire Extinguisher, Per Fire Blanket and Per Fire Hose Reel fields.</inlineHelpText>
    <label>Per Fire Blanket</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>