objects/SiteContracts__c/fields/Charge_per_Hydrant__c.field-meta.xml
<CustomField>
    <fullName>Charge_per_Hydrant__c</fullName>
    <inlineHelpText>anything that goes into this box gets transferred into the Product SER/1_4007.</inlineHelpText>
    <label>Per Hydrant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>