objects/SiteContracts__c/fields/Charge_Per_Riser__c.field-meta.xml
<CustomField>
    <fullName>Charge_Per_Riser__c</fullName>
    <inlineHelpText>anything that goes into this box gets transferred into the Product SER/7_4006.</inlineHelpText>
    <label>Per Riser</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>