objects/SiteContracts__c/fields/Check_Prices__c.field-meta.xml
<CustomField>
    <fullName>Check_Prices__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp; IF ( Price_Book__c &lt;&gt; &quot;&quot;, Price_Book__c, Price_Book_IdFormula__c ), &quot;Open Price Book&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Prices</label>
    <type>Text</type>
</CustomField>