objects/SiteContracts__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <length>100</length>
    <type>Text</type>
</CustomField>