objects/SiteContracts__c/fields/CO2_CONTACT__c.field-meta.xml
<CustomField>
    <fullName>CO2_CONTACT__c</fullName>
    <label>CO2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>