objects/SiteContracts__c/fields/CO2_QTY__c.field-meta.xml
<CustomField>
    <fullName>CO2_QTY__c</fullName>
    <label>CO2 QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>