objects/SiteContracts__c/fields/COMM_QTY__c.field-meta.xml
<CustomField>
    <fullName>COMM_QTY__c</fullName>
    <label>COMM QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>