objects/SiteContracts__c/fields/COMMUNICATOR__c.field-meta.xml
<CustomField>
    <fullName>COMMUNICATOR__c</fullName>
    <label>COMMUNICATOR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>