objects/SiteContracts__c/fields/CON_PC_FEnd_QTY__c.field-meta.xml
<CustomField>
    <fullName>CON_PC_FEnd_QTY__c</fullName>
    <label>CON/PC/FEnd QTY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>