objects/SiteContracts__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Service Contact</label>
    <length>199</length>
    <type>Text</type>
</CustomField>