objects/SiteContracts__c/fields/Contact_Site_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Contact_Site_Contracts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Site Contracts</relationshipLabel>
    <relationshipName>Site_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>