objects/SiteContracts__c/fields/Contract_Status_Change_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status_Change_Date_Time__c</fullName>
    <label>Contract Status Change Date/Time</label>
    <type>DateTime</type>
</CustomField>