objects/SiteContracts__c/fields/CONTROLLED_PC_FRONT_END__c.field-meta.xml
<CustomField>
    <fullName>CONTROLLED_PC_FRONT_END__c</fullName>
    <label>CONTROLLED PC FRONT END</label>
    <length>100</length>
    <type>Text</type>
</CustomField>