objects/SiteContracts__c/fields/Count_used_in_reportsq__c.field-meta.xml
<CustomField>
    <fullName>Count_used_in_reportsq__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count ( used in reports )</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>