objects/SiteContracts__c/fields/Cover_Plate_Pri__c.field-meta.xml
<CustomField>
    <fullName>Cover_Plate_Pri__c</fullName>
    <label>Cover Plate Pri</label>
    <length>100</length>
    <type>Text</type>
</CustomField>