objects/SiteContracts__c/fields/Cover_Plate_Sec__c.field-meta.xml
<CustomField>
    <fullName>Cover_Plate_Sec__c</fullName>
    <label>Cover Plate Sec</label>
    <length>100</length>
    <type>Text</type>
</CustomField>