objects/SiteContracts__c/fields/D_C_QTY__c.field-meta.xml
<CustomField>
    <fullName>D_C_QTY__c</fullName>
    <label>D/C QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>