objects/SiteContracts__c/fields/Date_of_First_Service__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Service__c</fullName>
    <inlineHelpText>Date for the initial Salesforce Service. This is from Alarm Master Data and starts October 2013</inlineHelpText>
    <label>Date of First Service</label>
    <type>Date</type>
</CustomField>