objects/SiteContracts__c/fields/DOOR_CONTACT__c.field-meta.xml
<CustomField>
    <fullName>DOOR_CONTACT__c</fullName>
    <label>DOOR CONTACT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>