objects/SiteContracts__c/fields/DRY_POW_QTY__c.field-meta.xml
<CustomField>
    <fullName>DRY_POW_QTY__c</fullName>
    <label>DRY POW QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>