objects/SiteContracts__c/fields/DRY_POWDER__c.field-meta.xml
<CustomField>
    <fullName>DRY_POWDER__c</fullName>
    <label>DRY POWDER</label>
    <length>100</length>
    <type>Text</type>
</CustomField>