objects/SiteContracts__c/fields/Due__c.field-meta.xml
<CustomField>
    <fullName>Due__c</fullName>
    <inlineHelpText>This is the first month on which a visit/service was/is due on this site. This is used by the salesforce trigger to populate a visit onto the site contract, when the Visit Reschedule is set to On Schedule. On Schedule takes its schedule from this field.</inlineHelpText>
    <label>Month Due</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JAN</fullName>
            </value>
            <value>
                <fullName>FEB</fullName>
            </value>
            <value>
                <fullName>MAR</fullName>
            </value>
            <value>
                <fullName>APR</fullName>
            </value>
            <value>
                <fullName>MAY</fullName>
            </value>
            <value>
                <fullName>JUN</fullName>
            </value>
            <value>
                <fullName>JUL</fullName>
            </value>
            <value>
                <fullName>AUG</fullName>
            </value>
            <value>
                <fullName>SEP</fullName>
            </value>
            <value>
                <fullName>OCT</fullName>
            </value>
            <value>
                <fullName>NOV</fullName>
            </value>
            <value>
                <fullName>DEC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>