objects/SiteContracts__c/fields/DVR__c.field-meta.xml
<CustomField>
    <fullName>DVR__c</fullName>
    <label>DVR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>