objects/SiteContracts__c/fields/DVR_QTY__c.field-meta.xml
<CustomField>
    <fullName>DVR_QTY__c</fullName>
    <label>DVR QTY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>