objects/SiteContracts__c/fields/E_Lights__c.field-meta.xml
<CustomField>
    <fullName>E_Lights__c</fullName>
    <label>E/Lights</label>
    <length>100</length>
    <type>Text</type>
</CustomField>